[package]
name = "woff"
version = "0.2.3"
edition = "2021"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a compressor for fonts in Web Open Font Format."
documentation = "https://docs.rs/woff"
homepage = "https://github.com/bodoni/woff"
repository = "https://github.com/bodoni/woff"
readme = "README.md"
categories = ["parsing"]
keywords = ["font", "opentype", "typeface", "typography", "woff"]
include = [
    "Cargo.toml",
    "build.rs",
    "src/*",
    "vendor/brotli/source/c/*",
    "vendor/woff2/source/include/*",
    "vendor/woff2/source/src/*",
    "vendor/woff2/wrapper/*",
]
build = "build.rs"

[features]
binary = ["arguments"]

[[bin]]
name = "woff"
path = "src/main.rs"
required-features = ["binary"]

[dependencies]
arguments = { version = "0.7", optional = true }

[build-dependencies]
cc = "1.0"
